--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,11 @@
         <h1 class="logo">
           <img src="./img/h1_logo.png" alt="로고 이미지" />
         </h1>
-        <nav>
+        <nav class="nav">
           <ul>
+            <li class="mobile nav-logo">
+              <img src="./img/intro_txt.png" alt="" />
+            </li>
             <li><a href="#">카시아 속초</a></li>
             <li><a href="#">사업개요</a></li>
             <li><a href="#">입지환경</a></li>
@@ -31,14 +34,21 @@
             <li><a href="#">THE SANCTUARY CLUB</a></li>
             <li><a href="#">관심고객등록</a></li>
           </ul>
+          <button class="mobile nav-close">
+            <img src="./img/bbs_close.png" alt="네이게이션 닫기" />
+          </button>
         </nav>
-        <a href="tel:1644-8484">
+        <a href="tel:1644-8484" class="tel">
           <i class="fas fa-phone-alt"></i>
           1644-8484
         </a>
+        <button class="mobile nav-open">
+          <img src="./img/m_menu.png" alt="네이게이션 열기" />
+        </button>
       </header>
       <div class="visual">
         <ul>
+          <li></li>
           <li></li>
           <li></li>
         </ul>
@@ -150,5 +160,6 @@
         <p>COPYRIGHTⒸ 2020 CASSIA SOKCHO ALL RIGHTS RESERVED.</p>
       </footer>
     </div>
+    <script src="./js/app.js"></script>
   </body>
 </html>
